--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".SigninActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".ExpenseActivity" />
         <activity
             android:name=".CustomActivity"
             android:screenOrientation="portrait" />
