--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ExpenseActivity" />
         <activity android:name=".AddExpense" />
         <activity android:name=".WalletInitializationActivity"/>
+        <activity android:name=".SettleupActivity"/>
 
 
         <activity
